<resources>
    <string name="app_name">BZender</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="forget_password">Forgot Password</string>
    <string name="no_have_account_yet_create_one">Do not Have An Account ?</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="country">Country</string>
    <string name="my_profile">My Profile</string>
    <string name="tinder">My Tender</string>
    <string name="call_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="log_out">Log Out</string>
    <string name="sign_up">Sign Up</string>
    <string name="by_using_bzender_you_agree_to_bzender_s_terms_of_use_and_privacy_policy">By Using BZENDER, You Agree to BZENDER’s Terms of Use and Privacy Policy</string>
    <string name="we_just_need_your_registered_phone_to_sent_your_password_reset_instruction">We just need your registered Phone to sent your password reset instruction</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="back">Back</string>
    <string name="verification">VERIFICATION</string>
    <string name="send_the_code_that_was_sent_to_phone_number">Send the code that was sent to Phone Number</string>
    <string name="continue_txt">Continue</string>
    <string name="add_tinder">Add Tender</string>
    <string name="description">Mini Description , please do not  write quantity or price</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="terms_and_condition">Terms And Condition</string>
    <string name="notification">Notification</string>
    <string name="_0">0</string>
    <string name="sponser">SPONSER</string>
    <string name="tinder_name">Tender Name</string>
    <string name="book">Book</string>
    <string name="notifications">Notifications</string>
    <string name="chats">Meeting Room</string>
    <string name="online">Online</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="next">NEXT</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="work_address">Work Address</string>
    <string name="work_position">Work Position</string>
    <string name="national_id">National ID</string>
    <string name="email_address">Email Address :</string>
    <string name="how_it_work">How it Work</string>
    <string name="address">City</string>
    <string name="tender_title">Tender Title</string>
    <string name="tender_type">Tender Type</string>
    <string name="vision">VISION</string>
    <string name="mission">MISSION</string>
    <string name="contact_us">Contact US</string>
    <string name="settings">Settings</string>
    <string name="address_">ADDRESS :</string>
    <string name="phone_number">PHONE NUMBER :</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="ok">OK</string>
    <string name="change_password">Change Password</string>
    <string name="change_language">Change Language</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="profile">Profile</string>
    <string name="my_tender">My Tender</string>
    <string name="reserved_tender">Reserved Tender</string>
    <string name="my_points">Points</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">العربية</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="tender_maker">Tender Maker</string>
    <string name="bidder">Bidder</string>
    <string name="tender_details">Tender Details</string>
    <string name="success_message">The tender has been successfully booked</string>
    <string name="title_is_empty">Tender title is required</string>
    <string name="city_is_empty">City is required</string>
    <string name="start_date_error">Start date is required</string>
    <string name="end_date_error">End date is required</string>
    <string name="desc_error">Description is required</string>
    <string name="cat_id_empty">Location is required</string>
    <string name="complaint_msg_empty">Complaint message is required</string>
    <string name="user_name_error">Name is required</string>
    <string name="email_error">Email is required</string>
    <string name="country_code_error">Country code is required</string>
    <string name="mobile_number_error">Mobile number is required</string>
    <string name="address_is_empty">Address is required</string>
    <string name="old_pass_error">Old password is required</string>
    <string name="new_pass_error">New password is required</string>
    <string name="confirm_pass_error">Confirm password is required</string>
    <string name="intro_one_first_txt">The First B2B App</string>
    <string name="intro_one_second_txt">All Market In one App by one Click</string>
    <string name="intro_two_first_txt">First Online Platform     for e - Tender</string>
    <string name="intro_two_second_txt">Make a Tender or Bid a Tender in one App From your Office, Home, Else.</string>
    <string name="intro_three_first_txt">Data Security and No Bribes</string>
    <string name="intro_three_second_txt">One - Way Situation</string>
    <string name="intro_four_first_txt">Best Result for All</string>
    <string name="intro_four_second_txt">Best Price and Quality for Makers and Best Selling and Marketing for Bidders</string>
    <string name="complete_add_tinder_sec">your process done successfully , please wait until accepting your tender .</string>
    <string name="individual_person">Individual \nPerson</string>
    <string name="business">Business</string>
    <string name="fill_data">Fill Data</string>
    <string name="default_notification_channel_id">defaultNotificationId</string>
    <string name="remain_time">Remain Time</string>
    <string name="days">DAY</string>
    <string name="hrs">HR</string>
    <string name="mins">MIN</string>
    <string name="secs">SEC</string>
    <string name="city">City</string>
    <string name="congratulations">Congratulations</string>
    <string name="view_tender_details">View Tender Details</string>
    <string name="car_type">Car Type</string>
    <string name="car_model">Car Model</string>
    <string name="kilometers">Kilometers</string>
    <string name="to">To</string>
    <string name="transmission_type">Transmission Type</string>
    <string name="manual">Manual</string>
    <string name="automatic">Automatic</string>
    <string name="year_of_cars">Year of cars</string>
    <string name="num_of_cars">Number of cars</string>
    <string name="origin_in_man">Origin of manufacture</string>
    <string name="electrical_until">Electrical unit status</string>
    <string name="neww">Manual</string>
    <string name="used">Automatic</string>
    <string name="guarantee">Guarantee</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="electrical_type">Electrical type</string>
    <string name="model">Model</string>
    <string name="year_of_manu">Year of manufacture</string>
    <string name="number_of_unit">Number of unit</string>
    <string name="violation_certificate">Violation Certificate</string>
    <string name="license_status">License Status</string>
    <string name="registration_fees">Governmental Fees of Registration</string>
    <string name="the_possibility_of">Check testing availability</string>
    <string name="engine_capacity">Engine Capacity</string>
    <string name="extra_features">Extra Features</string>
    <string name="note_error">Note is required</string>
    <string name="year_of_car_error">Year of car is required</string>
    <string name="numer_of_car_error">Number of car is required</string>
    <string name="from_km_is_required">From And To km is required</string>
    <string name="car_typr_error">Car type is required</string>
    <string name="car_model_error">Car model is required</string>
    <string name="type_required">Type is required</string>
    <string name="model_error">Electrical model is required</string>
    <string name="year_error">Year is required</string>
    <string name="number_of_error">Number of unit is required</string>
    <string name="country_error">Country is rquired</string>
    <string name="price_is_required">Price is required</string>
    <string name="response_one">Created Successfully</string>
    <string name="response_two">Not Found</string>
    <string name="response_three">Something happened Wrong</string>
    <string name="response_four">Password Changed Successfully</string>
    <string name="response_five">Incorrect Password</string>
    <string name="response_six">Not valid</string>
    <string name="response_seven">This field is required</string>
    <string name="response_eight">Deleted Successfully</string>
    <string name="response_nine">You Can not Booking the same tender twice</string>
    <string name="response_ten">You Must activate your account</string>
    <string name="response_eleven">Email incorrect</string>
    <string name="response_twelve">Please upload image of type .jpg,.gif or .png</string>
    <string name="response_thirteen">Please upload a file up to 5 mb</string>
    <string name="response_fourteen">Image updated Successfully</string>
    <string name="response_fivteen">Please upload a image</string>
    <string name="response_sexteen">Mail Send Successfully</string>
    <string name="response_sevteen">Email Is Already Taken</string>
    <string name="response_eighteen">Name Is Invalid</string>
    <string name="response_ninteen">The Password Must Be At Least 6 Characters</string>
    <string name="response_twenty">Something Wrong With Upload Image</string>
    <string name="response_twenty_one">Incorrect Email</string>
    <string name="response_twenty_four">Invalid Country</string>
    <string name="response_twenty_five">Invalid City</string>
    <string name="response_twenty_sex">Try Again Later</string>
    <string name="response_ninty_sex">You Can Not Upload More Than 6 Images</string>
    <string name="response_ninty_eight">This Phone Number Registered Before</string>
    <string name="response_ninty_nine">Your Balance Is Less Than 800</string>
    <string name="response_one_hundred_and_one">Token Is Inavlid</string>
    <string name="default_error">Something happend wrong</string>
    <string name="password_error">Password Is Required</string>
    <string name="password_size">Password must be greater than 6</string>
    <string name="confirm_pass_error_match">Password not match</string>
    <string name="register_successfully">Your Account Created Successfully And You Have </string>
    <string name="cat_cars">Cars</string>
    <string name="cat_electronincs">Electronics</string>
    <string name="create_an_account">Create An Account </string>
    <string name="email_inavlid">Email Invalid</string>
    <string name="mobile_number_inavlid">Phone Number Is Invalid</string>
    <string name="code_error">Verification Code Is Required</string>
    <string name="account_verified">Your Account Verified Successfully</string>
    <string name="point">Point</string>
    <string name="error_verfication">Please Check Your Verfication Code And Try Again</string>
    <string name="item_details">Item Details</string>
    <string name="show_success_for_edit">Account Editted Successfully</string>
    <string name="password_changed">Password Changed Successfully</string>
</resources>