<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/graycolor"
    android:alpha="0.7"
    >
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_txt"
        >
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_txt"
            android:orientation="vertical"
            >
            <apps.pixel.bzender.Utills.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_language"
                android:textSize="@dimen/forgot_txt_size"
                android:textColor="@color/blakcolor"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="@dimen/margin_txt"
                android:layout_marginBottom="@dimen/margint"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height"
                android:background="@color/blakcolor"
                />
            <apps.pixel.bzender.Utills.MyTextView
                android:id="@+id/english"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_button"
                android:text="@string/english"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/blakcolor"
                android:layout_gravity="center"
                android:padding="@dimen/margin_txt"
                android:gravity="center"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height"
                android:background="@color/blakcolor"
                />
            <apps.pixel.bzender.Utills.MyTextView
                android:id="@+id/arabic"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_button"
                android:text="@string/arabic"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/blakcolor"
                android:layout_gravity="center"
                android:padding="@dimen/margin_txt"
                android:gravity="center"
                />
        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v7.widget.CardView>
    <apps.pixel.bzender.Utills.ButtonBold
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_txt"
        android:background="@color/whitecolor"
        android:text="@string/cancel"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/blakcolor"
    />
</android.support.v7.widget.LinearLayoutCompat>