<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:layout_marginStart="@dimen/_30_height"
    android:layout_marginEnd="@dimen/_30_height"
    android:orientation="vertical">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <apps.sharabash.bzender.Utills.MyTextViewBold
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/_4_height"
            android:text="@string/error"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_14ssp" />

        <apps.sharabash.bzender.Utills.MyTextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/_4_height"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_12ssp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1dp_height"
            android:background="@color/colorPrimaryDark" />

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4_height"
            android:orientation="horizontal"
            android:weightSum="1">

            <apps.sharabash.bzender.Utills.MyTextView
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="@dimen/_45_height"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_14ssp" />

            <View
                android:layout_width="@dimen/_1dp_height"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryDark" />

            <apps.sharabash.bzender.Utills.MyTextView
                android:id="@+id/ok"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/ok"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_14ssp" />
        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v7.widget.LinearLayoutCompat>