<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.fillDataElectrical.FillDataElectricalActivity">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/img_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:scaleType="fitXY"
        android:src="@drawable/app_bg" />

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        android:paddingTop="@dimen/_20_height"
        android:paddingBottom="@dimen/_20_height"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:layout_collapseMode="pin"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:ignore="UnusedAttribute">

        <LinearLayout
            android:id="@+id/title_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible"
            android:weightSum="411">

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="20" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/imageNavigationIcon"
                android:layout_width="0dp"
                android:layout_height="19dp"
                android:layout_gravity="center"
                android:layout_weight="25"
                android:scaleType="centerInside"
                android:src="@drawable/reply" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="22" />

            <apps.sharabash.bzender.Utills.MyTextViewBold
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="344"
                android:text="@string/fill_data"
                android:textColor="@color/whitecolor"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/linear_wheel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:orientation="vertical">


                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:background="@color/app_color_dark"
                    android:orientation="horizontal"
                    android:padding="@dimen/_10sdp">


                    <apps.sharabash.bzender.Utills.MyTextViewBold
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="start|center"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/model"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_10ssp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="@dimen/_1sdp"
                        android:layout_height="match_parent"
                        android:background="@android:color/white" />

                    <apps.sharabash.bzender.Utills.MyTextViewBold
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="start|center"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/electrical_type"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_10ssp"
                        android:textStyle="bold" />


                </android.support.v7.widget.LinearLayoutCompat>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal">


                    <com.wx.wheelview.widget.WheelView
                        android:id="@+id/wheelview"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="TODO"
                        android:src="@drawable/shape_wheel_white" />

                    <com.wx.wheelview.widget.WheelView
                        android:id="@+id/wheelviewTwo"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1" />


                </LinearLayout>

            </android.support.v7.widget.LinearLayoutCompat>


            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/linear_wheel_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear_wheel"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:orientation="vertical">


                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:background="@color/app_color_dark"
                    android:orientation="horizontal"
                    android:padding="@dimen/_10sdp">


                    <apps.sharabash.bzender.Utills.MyTextViewBold
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="start|center"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/year_of_manu"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_10ssp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="@dimen/_1sdp"
                        android:layout_height="match_parent"
                        android:background="@android:color/white" />

                    <apps.sharabash.bzender.Utills.MyTextViewBold
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="start|center"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/number_of_unit"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_10ssp"
                        android:textStyle="bold" />


                </android.support.v7.widget.LinearLayoutCompat>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal">


                    <com.wx.wheelview.widget.WheelView
                        android:id="@+id/wheelview_three"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="TODO"
                        android:src="@drawable/shape_wheel_white" />

                    <com.wx.wheelview.widget.WheelView
                        android:id="@+id/wheelview_four"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1" />


                </LinearLayout>

            </android.support.v7.widget.LinearLayoutCompat>


            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/linear_radio_btns_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linear_wheel_two"
                android:layout_marginBottom="@dimen/_20sdp"
                android:orientation="horizontal">


                <apps.sharabash.bzender.Utills.MyTextViewBold
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:text="@string/electrical_until"
                    android:textColor="@color/whitecolor"
                    android:textSize="@dimen/_12ssp" />


                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:gravity="center|start"
                    android:hint="@string/to"
                    android:paddingStart="@dimen/_4sdp"
                    android:paddingTop="@dimen/_4sdp"
                    android:paddingEnd="@dimen/_4sdp"
                    android:paddingBottom="@dimen/_4sdp">


                    <android.support.v7.widget.AppCompatRadioButton
                        android:id="@+id/radio_btn_new"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/neww"
                        android:textColor="@color/whitecolor"
                        android:textSize="@dimen/_10ssp"
                        android:theme="@style/RadioButtonStyle" />

                    <android.support.v7.widget.AppCompatRadioButton
                        android:id="@+id/radio_btn_used"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/used"
                        android:textColor="@color/whitecolor"
                        android:textSize="@dimen/_10ssp"
                        android:theme="@style/RadioButtonStyle" />

                </RadioGroup>

            </android.support.v7.widget.LinearLayoutCompat>


            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/linear_radio_btns_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linear_radio_btns_one"
                android:orientation="horizontal">


            </android.support.v7.widget.LinearLayoutCompat>


            <apps.sharabash.bzender.Utills.MyTextView
                android:id="@+id/checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear_radio_btns_two"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="-2dp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:autoSizeMaxTextSize="@dimen/_5sdp"
                android:background="@drawable/shape_white"
                android:gravity="start|center"
                android:paddingStart="@dimen/_10sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:text="@string/origin_in_man"
                android:textColor="@color/blakcolor"
                app:buttonTint="@color/whitecolor" />


            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/checkbox"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:orientation="vertical">

                <apps.sharabash.bzender.Utills.MyEditText
                    android:id="@+id/et_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_white"
                    android:hint="@string/extra_features"
                    android:inputType="text"
                    android:paddingStart="@dimen/_4sdp"
                    android:paddingTop="@dimen/_4sdp"
                    android:paddingEnd="@dimen/_4sdp"
                    android:paddingBottom="@dimen/_50sdp"
                    android:textColor="@color/blakcolor"
                    android:textSize="@dimen/_12ssp" />


                <apps.sharabash.bzender.Utills.ButtonBook
                    android:id="@+id/btn_send"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_45_height"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_weight="120"
                    android:background="@color/colorAccent"
                    android:gravity="center"
                    android:text="@string/send"
                    android:textColor="@color/whitecolor"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold" />

            </android.support.v7.widget.LinearLayoutCompat>

        </RelativeLayout>


    </android.support.v4.widget.NestedScrollView>


</RelativeLayout>